Notebooks for dataframes are modified

--- a/MDA_merge_data.ipynb
+++ b/MDA_merge_data.ipynb
@@ -18,18 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +202,7 @@
        "[52560 rows x 2 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +350,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +401,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,12 +415,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "'result_timestamp' is converted to string, because exporting datetime column to csv and importing again gives problems."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['result_timestamp'] = df['result_timestamp'].astype(str)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Dataframe is visualized for final check."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -727,62 +743,62 @@
        "</div>"
       ],
       "text/plain": [
-       "         result_timestamp       laeq  hour  day  day_of_month  month  weekend   \n",
-       "0     2022-01-02 00:10:00  40.954667     0    6             2      1        1  \\\n",
-       "1     2022-01-02 00:20:00  37.623667     0    6             2      1        1   \n",
-       "2     2022-01-02 00:30:00  36.445333     0    6             2      1        1   \n",
-       "3     2022-01-02 00:40:00  38.298000     0    6             2      1        1   \n",
-       "4     2022-01-02 00:50:00  39.350417     0    6             2      1        1   \n",
-       "...                   ...        ...   ...  ...           ...    ...      ...   \n",
-       "52410 2022-12-31 23:10:00  52.203333    23    5            31     12        1   \n",
-       "52411 2022-12-31 23:20:00  54.622833    23    5            31     12        1   \n",
-       "52412 2022-12-31 23:30:00  56.135667    23    5            31     12        1   \n",
-       "52413 2022-12-31 23:40:00  59.380333    23    5            31     12        1   \n",
-       "52414 2022-12-31 23:50:00  57.698331    23    5            31     12        1   \n",
+       "          result_timestamp       laeq  hour  day  day_of_month  month   \n",
+       "0      2022-01-02 00:10:00  40.954667     0    6             2      1  \\\n",
+       "1      2022-01-02 00:20:00  37.623667     0    6             2      1   \n",
+       "2      2022-01-02 00:30:00  36.445333     0    6             2      1   \n",
+       "3      2022-01-02 00:40:00  38.298000     0    6             2      1   \n",
+       "4      2022-01-02 00:50:00  39.350417     0    6             2      1   \n",
+       "...                    ...        ...   ...  ...           ...    ...   \n",
+       "52410  2022-12-31 23:10:00  52.203333    23    5            31     12   \n",
+       "52411  2022-12-31 23:20:00  54.622833    23    5            31     12   \n",
+       "52412  2022-12-31 23:30:00  56.135667    23    5            31     12   \n",
+       "52413  2022-12-31 23:40:00  59.380333    23    5            31     12   \n",
+       "52414  2022-12-31 23:50:00  57.698331    23    5            31     12   \n",
        "\n",
-       "       LC_HUMIDITY  LC_DWPTEMP  LC_n  LC_RAD  LC_RAININ  LC_DAILYRAIN   \n",
-       "0             91.0       11.88  38.0     0.0      0.000         0.000  \\\n",
-       "1             90.0       11.72  37.0     0.0      0.000         0.000   \n",
-       "2             90.0       11.72  38.0     0.0      0.000         0.000   \n",
-       "3             90.0       11.72  37.0     0.0      0.000         0.000   \n",
-       "4             90.0       11.72  38.0     0.0      0.000         0.000   \n",
-       "...            ...         ...   ...     ...        ...           ...   \n",
-       "52410         94.0       12.63  38.0     0.0      0.000         0.007   \n",
-       "52411         94.0       12.61  37.0     0.0      0.000         0.000   \n",
-       "52412         94.0       12.67  38.0     0.0      0.000         0.000   \n",
-       "52413         94.0       12.73  37.0     0.0      0.003         0.000   \n",
-       "52414         95.0       12.78  38.0     0.0      0.000         0.000   \n",
+       "       weekend  LC_HUMIDITY  LC_DWPTEMP  LC_n  LC_RAD  LC_RAININ   \n",
+       "0            1         91.0       11.88  38.0     0.0      0.000  \\\n",
+       "1            1         90.0       11.72  37.0     0.0      0.000   \n",
+       "2            1         90.0       11.72  38.0     0.0      0.000   \n",
+       "3            1         90.0       11.72  37.0     0.0      0.000   \n",
+       "4            1         90.0       11.72  38.0     0.0      0.000   \n",
+       "...        ...          ...         ...   ...     ...        ...   \n",
+       "52410        1         94.0       12.63  38.0     0.0      0.000   \n",
+       "52411        1         94.0       12.61  37.0     0.0      0.000   \n",
+       "52412        1         94.0       12.67  38.0     0.0      0.000   \n",
+       "52413        1         94.0       12.73  37.0     0.0      0.003   \n",
+       "52414        1         95.0       12.78  38.0     0.0      0.000   \n",
        "\n",
-       "       LC_WINDDIR  LC_WINDSPEED  LC_RAD60  LC_TEMP_QCL0  LC_TEMP_QCL1   \n",
-       "0           -48.0          0.04       0.0         13.28         13.28  \\\n",
-       "1            45.0          0.02       0.0         13.28         13.28   \n",
-       "2           -52.0          0.04       0.0         13.28         13.28   \n",
-       "3            34.0          0.02       0.0         13.28         13.28   \n",
-       "4             0.0          0.00       0.0         13.28         13.28   \n",
-       "...           ...           ...       ...           ...           ...   \n",
-       "52410        28.0          0.09       0.0         13.51         13.51   \n",
-       "52411        72.0          0.03       0.0         13.50         13.50   \n",
-       "52412        63.0          0.04       0.0         13.56         13.56   \n",
-       "52413        34.0          0.14       0.0         13.61         13.61   \n",
-       "52414      -167.0          0.02       0.0         13.61         13.61   \n",
+       "       LC_DAILYRAIN  LC_WINDDIR  LC_WINDSPEED  LC_RAD60  LC_TEMP_QCL0   \n",
+       "0             0.000       -48.0          0.04       0.0         13.28  \\\n",
+       "1             0.000        45.0          0.02       0.0         13.28   \n",
+       "2             0.000       -52.0          0.04       0.0         13.28   \n",
+       "3             0.000        34.0          0.02       0.0         13.28   \n",
+       "4             0.000         0.0          0.00       0.0         13.28   \n",
+       "...             ...         ...           ...       ...           ...   \n",
+       "52410         0.007        28.0          0.09       0.0         13.51   \n",
+       "52411         0.000        72.0          0.03       0.0         13.50   \n",
+       "52412         0.000        63.0          0.04       0.0         13.56   \n",
+       "52413         0.000        34.0          0.14       0.0         13.61   \n",
+       "52414         0.000      -167.0          0.02       0.0         13.61   \n",
        "\n",
-       "       LC_TEMP_QCL2  LC_TEMP_QCL3  \n",
-       "0            13.223      13.23639  \n",
-       "1            13.223      13.16699  \n",
-       "2            13.223      13.19886  \n",
-       "3            13.223      13.16699  \n",
-       "4            13.223      13.09212  \n",
-       "...             ...           ...  \n",
-       "52410        13.453      13.48489  \n",
-       "52411        13.443      13.40492  \n",
-       "52412        13.503      13.47255  \n",
-       "52413        13.553      13.60671  \n",
-       "52414        13.553      13.51775  \n",
+       "       LC_TEMP_QCL1  LC_TEMP_QCL2  LC_TEMP_QCL3  \n",
+       "0             13.28        13.223      13.23639  \n",
+       "1             13.28        13.223      13.16699  \n",
+       "2             13.28        13.223      13.19886  \n",
+       "3             13.28        13.223      13.16699  \n",
+       "4             13.28        13.223      13.09212  \n",
+       "...             ...           ...           ...  \n",
+       "52410         13.51        13.453      13.48489  \n",
+       "52411         13.50        13.443      13.40492  \n",
+       "52412         13.56        13.503      13.47255  \n",
+       "52413         13.61        13.553      13.60671  \n",
+       "52414         13.61        13.553      13.51775  \n",
        "\n",
        "[52271 rows x 20 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -846,12 +862,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('MDA_dataframeArthur.csv')"
+    "df.to_csv('MDA_dataframeArthur.csv',index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
