dataframes+ KMI models + small fix to xgboost
KMI models of Ridge splines, histgradboost, xgboost
Small fix: feature importance: hyperparameters are corrected

--- a/MDA_xgboost.ipynb
+++ b/MDA_xgboost.ipynb
@@ -1741,42 +1741,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'hour': 5.488214015960693,\n",
-       " 'day': 0.919082760810852,\n",
-       " 'day_of_month': 0.17355205118656158,\n",
-       " 'month': 0.32424288988113403,\n",
-       " 'LC_HUMIDITY': 0.17968489229679108,\n",
-       " 'LC_DWPTEMP': 0.11804444342851639,\n",
-       " 'LC_n': 0.25962087512016296,\n",
-       " 'LC_RAD': 0.5565382242202759,\n",
-       " 'LC_DAILYRAIN': 0.14448657631874084,\n",
-       " 'LC_WINDDIR': 0.026100777089595795,\n",
-       " 'LC_WINDSPEED': 0.004930919501930475,\n",
-       " 'LC_RAD60': 0.13665170967578888,\n",
-       " 'LC_TEMP_QCL0': 0.2781853675842285,\n",
-       " 'LC_TEMP_QCL3': 0.15923605859279633}"
+       "{'hour': 14.245830535888672,\n",
+       " 'day': 3.299513339996338,\n",
+       " 'day_of_month': 0.11976116895675659,\n",
+       " 'month': 1.2487311363220215,\n",
+       " 'LC_HUMIDITY': 0.4806499481201172,\n",
+       " 'LC_RAD': 2.493515729904175,\n",
+       " 'LC_RAD60': 1.246988296508789,\n",
+       " 'LC_TEMP_QCL0': 0.7294268608093262,\n",
+       " 'LC_TEMP_QCL3': 0.6696067452430725}"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#feature importance\n",
-    "xgb_reg = xgb.XGBRegressor(learning_rate=0.02,n_estimators=120,max_depth=5, importance_type='gain').fit(X,y)\n",
+    "xgb_reg = xgb.XGBRegressor(learning_rate=0.03,n_estimators=70,max_depth=3, importance_type='gain').fit(X,y)\n",
     "xgb_reg.get_booster().get_score(importance_type='gain')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1810,139 +1805,94 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>hour</th>\n",
-       "      <td>1120.0</td>\n",
-       "      <td>5.488214</td>\n",
-       "      <td>14410.056641</td>\n",
-       "      <td>6146.799805</td>\n",
-       "      <td>16139263.0</td>\n",
+       "      <td>283.0</td>\n",
+       "      <td>14.245831</td>\n",
+       "      <td>24673.732422</td>\n",
+       "      <td>4031.570068</td>\n",
+       "      <td>6982666.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>day</th>\n",
-       "      <td>826.0</td>\n",
-       "      <td>0.919083</td>\n",
-       "      <td>8073.877930</td>\n",
-       "      <td>759.162354</td>\n",
-       "      <td>6669023.0</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>3.299513</td>\n",
+       "      <td>22473.119141</td>\n",
+       "      <td>412.439178</td>\n",
+       "      <td>2809140.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>day_of_month</th>\n",
-       "      <td>282.0</td>\n",
-       "      <td>0.173552</td>\n",
-       "      <td>3695.180908</td>\n",
-       "      <td>48.941677</td>\n",
-       "      <td>1042041.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.119761</td>\n",
+       "      <td>1392.000000</td>\n",
+       "      <td>0.119761</td>\n",
+       "      <td>1392.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>month</th>\n",
-       "      <td>700.0</td>\n",
-       "      <td>0.324243</td>\n",
-       "      <td>5662.485840</td>\n",
-       "      <td>226.970016</td>\n",
-       "      <td>3963740.0</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>1.248731</td>\n",
+       "      <td>12202.500000</td>\n",
+       "      <td>72.426407</td>\n",
+       "      <td>707745.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LC_HUMIDITY</th>\n",
-       "      <td>95.0</td>\n",
-       "      <td>0.179685</td>\n",
-       "      <td>5394.505371</td>\n",
-       "      <td>17.070065</td>\n",
-       "      <td>512478.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>LC_DWPTEMP</th>\n",
-       "      <td>165.0</td>\n",
-       "      <td>0.118044</td>\n",
-       "      <td>2592.672607</td>\n",
-       "      <td>19.477333</td>\n",
-       "      <td>427791.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>LC_n</th>\n",
-       "      <td>32.0</td>\n",
-       "      <td>0.259621</td>\n",
-       "      <td>4581.500000</td>\n",
-       "      <td>8.307868</td>\n",
-       "      <td>146608.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.480650</td>\n",
+       "      <td>30504.000000</td>\n",
+       "      <td>0.480650</td>\n",
+       "      <td>30504.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LC_RAD</th>\n",
-       "      <td>77.0</td>\n",
-       "      <td>0.556538</td>\n",
-       "      <td>15315.156250</td>\n",
-       "      <td>42.853443</td>\n",
-       "      <td>1179267.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>LC_DAILYRAIN</th>\n",
-       "      <td>37.0</td>\n",
-       "      <td>0.144487</td>\n",
-       "      <td>6253.918945</td>\n",
-       "      <td>5.346004</td>\n",
-       "      <td>231395.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>LC_WINDDIR</th>\n",
-       "      <td>24.0</td>\n",
-       "      <td>0.026101</td>\n",
-       "      <td>181.625000</td>\n",
-       "      <td>0.626419</td>\n",
-       "      <td>4359.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>LC_WINDSPEED</th>\n",
-       "      <td>18.0</td>\n",
-       "      <td>0.004931</td>\n",
-       "      <td>81.333336</td>\n",
-       "      <td>0.088757</td>\n",
-       "      <td>1464.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2.493516</td>\n",
+       "      <td>28158.599609</td>\n",
+       "      <td>24.935158</td>\n",
+       "      <td>281586.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LC_RAD60</th>\n",
-       "      <td>64.0</td>\n",
-       "      <td>0.136652</td>\n",
-       "      <td>3522.187500</td>\n",
-       "      <td>8.745709</td>\n",
-       "      <td>225420.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.246988</td>\n",
+       "      <td>33604.000000</td>\n",
+       "      <td>2.493977</td>\n",
+       "      <td>67208.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LC_TEMP_QCL0</th>\n",
-       "      <td>92.0</td>\n",
-       "      <td>0.278185</td>\n",
-       "      <td>3371.456543</td>\n",
-       "      <td>25.593054</td>\n",
-       "      <td>310174.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.729427</td>\n",
+       "      <td>8701.000000</td>\n",
+       "      <td>0.729427</td>\n",
+       "      <td>8701.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LC_TEMP_QCL3</th>\n",
-       "      <td>188.0</td>\n",
-       "      <td>0.159236</td>\n",
-       "      <td>2710.515869</td>\n",
-       "      <td>29.936380</td>\n",
-       "      <td>509577.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.669607</td>\n",
+       "      <td>9774.222656</td>\n",
+       "      <td>6.026461</td>\n",
+       "      <td>87968.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   0         0             0            0           0\n",
-       "hour          1120.0  5.488214  14410.056641  6146.799805  16139263.0\n",
-       "day            826.0  0.919083   8073.877930   759.162354   6669023.0\n",
-       "day_of_month   282.0  0.173552   3695.180908    48.941677   1042041.0\n",
-       "month          700.0  0.324243   5662.485840   226.970016   3963740.0\n",
-       "LC_HUMIDITY     95.0  0.179685   5394.505371    17.070065    512478.0\n",
-       "LC_DWPTEMP     165.0  0.118044   2592.672607    19.477333    427791.0\n",
-       "LC_n            32.0  0.259621   4581.500000     8.307868    146608.0\n",
-       "LC_RAD          77.0  0.556538  15315.156250    42.853443   1179267.0\n",
-       "LC_DAILYRAIN    37.0  0.144487   6253.918945     5.346004    231395.0\n",
-       "LC_WINDDIR      24.0  0.026101    181.625000     0.626419      4359.0\n",
-       "LC_WINDSPEED    18.0  0.004931     81.333336     0.088757      1464.0\n",
-       "LC_RAD60        64.0  0.136652   3522.187500     8.745709    225420.0\n",
-       "LC_TEMP_QCL0    92.0  0.278185   3371.456543    25.593054    310174.0\n",
-       "LC_TEMP_QCL3   188.0  0.159236   2710.515869    29.936380    509577.0"
+       "                  0          0             0            0          0\n",
+       "hour          283.0  14.245831  24673.732422  4031.570068  6982666.0\n",
+       "day           125.0   3.299513  22473.119141   412.439178  2809140.0\n",
+       "day_of_month    1.0   0.119761   1392.000000     0.119761     1392.0\n",
+       "month          58.0   1.248731  12202.500000    72.426407   707745.0\n",
+       "LC_HUMIDITY     1.0   0.480650  30504.000000     0.480650    30504.0\n",
+       "LC_RAD         10.0   2.493516  28158.599609    24.935158   281586.0\n",
+       "LC_RAD60        2.0   1.246988  33604.000000     2.493977    67208.0\n",
+       "LC_TEMP_QCL0    1.0   0.729427   8701.000000     0.729427     8701.0\n",
+       "LC_TEMP_QCL3    9.0   0.669607   9774.222656     6.026461    87968.0"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
