Small tests, small hyperparameter changes

--- a/MDA_KMIHistGradBoostRegr.ipynb
+++ b/MDA_KMIHistGradBoostRegr.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"C:\\\\Users\\Arthur\\hello\\MDA_dataframeArthurKMI.csv\")\n",
+    "df = pd.read_csv(\"C:\\\\Users\\Arthur\\hello\\MDA_dataframeArthur.csv\")\n",
     "df_nd = df.drop('result_timestamp', axis=1)"
    ]
   },
